--- a/Script/Msvc/AmjulaMusicTheory/MakeScore/MakeScore.vcxproj.filters
+++ b/Script/Msvc/AmjulaMusicTheory/MakeScore/MakeScore.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClCompile Include="..\..\..\..\Source\MakeScore\KeySig.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\Source\MakeScore\Attachment.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\Source\MakeScore\Switch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Source\MakeScore\MakeScore.h">
@@ -108,6 +114,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\Source\MakeScore\KeySig.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\Source\MakeScore\Attachment.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\Source\MakeScore\Switch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
