Avatar mod game state - early WIP

--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -596,15 +596,20 @@
     <Text Include="..\..\..\..\Assets\Course\level4\which_clef.txt" />
     <Text Include="..\..\..\..\Assets\en.txt" />
     <Text Include="..\..\..\..\Assets\Gui\avatar-eye-simple.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\avatar-mod-bg-and-tabs.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\avatar-mod-head.txt" />
     <Text Include="..\..\..\..\Assets\Gui\avatar.txt" />
     <Text Include="..\..\..\..\Assets\Gui\blackboard_erase.txt" />
     <Text Include="..\..\..\..\Assets\Gui\boilerplate.txt" />
     <Text Include="..\..\..\..\Assets\Gui\certificate.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\colour-picker.txt" />
     <Text Include="..\..\..\..\Assets\Gui\composers.txt" />
     <Text Include="..\..\..\..\Assets\Gui\compound_glyphs.txt" />
     <Text Include="..\..\..\..\Assets\Gui\corridor-shadow.txt" />
     <Text Include="..\..\..\..\Assets\Gui\corridor_mode_show_tappable.txt" />
     <Text Include="..\..\..\..\Assets\Gui\corridor_mode_wait.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\direction-control.txt" />
+    <Text Include="..\..\..\..\Assets\Gui\gs-avatar-mod.txt" />
     <Text Include="..\..\..\..\Assets\Gui\gs-first-user.txt" />
     <Text Include="..\..\..\..\Assets\Gui\gs_about.txt" />
     <Text Include="..\..\..\..\Assets\Gui\gs_line_drawing.txt" />
