Macosx: use new Bass lib

--- a/Script/Macosx/Makefile
+++ b/Script/Macosx/Makefile
@@ -8,11 +8,11 @@ BUILD		:=	../../Build/Mac
 TARGET		:=	$(BUILD)/macgame
 LIBDIRS   	:= 	$(AMJULIB)/Build/Releases/amjulib-v.0.5-macosx
 SOURCES		:=	../../Source 
-BASSPATH	:=	$(AMJULIB)/Source/SoundBass/Bass2.4/Macosx
+BASSPATH	:=	$(AMJULIB)/3rdPartyLibs/Bass/Bass2.4.16.7/Macosx
 
 LIBS	:= \
 	-lamju \
-	$(BASSPATH)/mp3-free/libbass.dylib \
+	$(BASSPATH)/libbass.dylib \
 	$(BASSPATH)/libbassmidi.dylib \
 	-framework OpenGL \
 	-framework GLUT \
@@ -28,7 +28,7 @@ run:
 
 #	cp $(TARGET) $(RUNDIR); \
 #	cp $(BASSPATH)/libbassmidi.dylib $(RUNDIR); \
-#	cp $(BASSPATH)/mp3-free/libbass.dylib $(RUNDIR); \
+#	cp $(BASSPATH)/libbass.dylib $(RUNDIR); \
 #	cd $(RUNDIR); \
 #	./macgame
 
@@ -36,7 +36,7 @@ run:
 runnoglue:
 	cp $(TARGET) $(RUNDIR)/Mac/; \
 	cp $(BASSPATH)/libbassmidi.dylib $(RUNDIR)/Mac/; \
-	cp $(BASSPATH)/mp3-free/libbass.dylib $(RUNDIR)/Mac/; \
+	cp $(BASSPATH)/libbass.dylib $(RUNDIR)/Mac/; \
 	cd $(RUNDIR)/Mac/; \
 	./macgame
 
@@ -44,10 +44,10 @@ runnoglue:
 runsetupold:
 	cp $(TARGET) $(RUNDIR); \
 	cp $(BASSPATH)/libbassmidi.dylib $(RUNDIR); \
-	cp $(BASSPATH)/mp3-free/libbass.dylib $(RUNDIR); 
+	cp $(BASSPATH)/libbass.dylib $(RUNDIR); 
 
 runsetup:
 	cp $(BASSPATH)/libbassmidi.dylib $(BUILD); \
-	cp $(BASSPATH)/mp3-free/libbass.dylib $(BUILD); 
+	cp $(BASSPATH)/libbass.dylib $(BUILD); 
 
 
