--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -303,7 +303,7 @@
     <ClCompile Include="..\..\..\..\Source\GSPages.cpp" />
     <ClCompile Include="..\..\..\..\Source\GSPause.cpp" />
     <ClCompile Include="..\..\..\..\Source\GSPlayNotes.cpp" />
-    <ClCompile Include="..\..\..\..\Source\GSShowLineDrawing.cpp" />
+    <ClCompile Include="..\..\..\..\Source\GSShowGui.cpp" />
     <ClCompile Include="..\..\..\..\Source\GSShowMusicScore.cpp" />
     <ClCompile Include="..\..\..\..\Source\GSTestShowScore.cpp" />
     <ClCompile Include="..\..\..\..\Source\GSTitle.cpp" />
@@ -443,7 +443,7 @@
     <ClInclude Include="..\..\..\..\Source\GSPages.h" />
     <ClInclude Include="..\..\..\..\Source\GSPause.h" />
     <ClInclude Include="..\..\..\..\Source\GSPlayNotes.h" />
-    <ClInclude Include="..\..\..\..\Source\GSShowLineDrawing.h" />
+    <ClInclude Include="..\..\..\..\Source\GSShowGui.h" />
     <ClInclude Include="..\..\..\..\Source\GSShowMusicScore.h" />
     <ClInclude Include="..\..\..\..\Source\GSTestShowScore.h" />
     <ClInclude Include="..\..\..\..\Source\GSTitle.h" />
