--- a/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
+++ b/Script/Msvc/AmjulaMusicTheory/AmjulaMusicTheory/AmjulaMusicTheory.vcxproj
@@ -293,6 +293,7 @@
     <ClCompile Include="..\..\..\..\Source\DictionaryPickQuestion.cpp" />
     <ClCompile Include="..\..\..\..\Source\GSAvatarMod.cpp" />
     <ClCompile Include="..\..\..\..\Source\GSGuiEdit.cpp" />
+    <ClCompile Include="..\..\..\..\Source\GSPagesEdit.cpp" />
     <ClCompile Include="..\..\..\..\Source\GSShowNewLevelNum.cpp" />
     <ClCompile Include="..\..\..\..\Source\GuiAvatar.cpp" />
     <ClCompile Include="..\..\..\..\Source\GSAbout.cpp" />
@@ -442,6 +443,7 @@
     <ClInclude Include="..\..\..\..\Source\GSGuiEdit.h" />
     <ClInclude Include="..\..\..\..\Source\GSMainCorridor.h" />
     <ClInclude Include="..\..\..\..\Source\GSPages.h" />
+    <ClInclude Include="..\..\..\..\Source\GSPagesEdit.h" />
     <ClInclude Include="..\..\..\..\Source\GSPause.h" />
     <ClInclude Include="..\..\..\..\Source\GSPlayNotes.h" />
     <ClInclude Include="..\..\..\..\Source\GSShowGui.h" />
